improvements for filter documentation fixed various static analysis errors